DuPont DevSB/src/objects/ffirule__IntegrationRuleAction__c.object
<CustomObject>
    <customHelpPage>ffirule__helpintegrationruleaction</customHelpPage>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__ActionMessage__c</fullName>
        <label>Action Message</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ActionName__c</fullName>
        <label>Action Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__FeedLinkMessageTargetField__c</fullName>
        <label>Feed Link Message Target Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__FeedLinkMessage__c</fullName>
        <label>Feed Link Message</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__FeedMessageTargetField__c</fullName>
        <label>Feed Message Target Field</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__FeedMessage__c</fullName>
        <label>Feed Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRule__c</fullName>
        <label>ClickLink Rule</label>
        <referenceTo>ffirule__IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Actions</relationshipLabel>
        <relationshipName>IntegrationRuleActionsActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffirule__VisualForce__c</fullName>
        <formula>&apos;&lt;apex:page standardController=&quot;&apos; + ffirule__IntegrationRule__r.ffirule__SourceObject__c + &apos;&quot; extensions=&quot;ffirule.IntegrationRuleEngine&quot; docType=&quot;html-5.0&quot; standardStylesheets=&quot;false&quot; showheader=&quot;false&quot; sidebar=&quot;false&quot;&gt;&apos;+ BR() +
&apos;&lt;apex:variable var=&quot;sourceId&quot; value=&quot;&apos; + &apos;{&apos; + &apos;!&apos; + ffirule__IntegrationRule__r.ffirule__SourceObject__c + &apos;.Id}&quot;/&gt;&apos; + BR()
 +&apos;&lt;ffirule:IntegrationRule engine=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;engine&apos;+&apos;}&apos;+&apos;&quot; actionName=&quot;&apos; + ffirule__ActionName__c + &apos;&quot;  sourceId=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;sourceId&apos;+&apos;}&apos;+&apos;&quot;/&gt;&apos;+ BR() + &apos;&lt;/apex:page&gt;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VisualForce</label>
        <type>Text</type>
    </fields>
    <label>ClickLink Action</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>